manifests/env/phobos/paddock/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    haproxy.router.openshift.io/timeout: 120s
    # haproxy.router.openshift.io/cors-allow-origin: "https://databox.b4mad.racing"
    # If you need to allow multiple origins, separate them with a space
    # haproxy.router.openshift.io/cors-allow-origin: "https://databox.b4mad.racing https://other-domain.com"
    # haproxy.router.openshift.io/disable-cookies: "true"  # Optional, if you don't need cookies
    # haproxy.router.openshift.io/cors-allow-methods: "GET POST OPTIONS"  # Adjust methods as needed
    # haproxy.router.openshift.io/cors-allow-headers: "Authorization,Content-Type"  # Adjust headers as needed
  name: b4mad-racing
spec:
  ingressClassName: openshift-default
  rules:
    - host: b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paddock
                port:
                  name: django-web
    - host: paddock.b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: paddock
                port:
                  name: django-web
  tls:
    - hosts:
        - b4mad.racing
        - paddock.b4mad.racing
      secretName: https-cert-b4mad.racing
